app/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: aigounad-service
  namespace: dev
spec:
  type: nodePort
  selector:
    app: aigounad
  ports:
    - port: 8888
      targetPort: 8888
      nodePort: 30888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aigounad-app
  namespace: dev
spec:
  selector:
    matchLabels:
      app: aigounad
  template:
    metadata:
      labels:
        app: aigounad
    spec:
      containers:
      - name: aigounad
        image: wil42/playground:v2
        ports:
        - containerPort: 8888
