app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aigounad-service
  namespace: dev
spec:
  selector:
    app: aigounad
  ports:
    - nodePort: 8888
      targetPort: 8888
